bloqueia envio de mensagens para atividades sem responsavel.

--- a/Fontes.NET/GLeitos/GLeitos/Web.config
+++ b/Fontes.NET/GLeitos/GLeitos/Web.config
@@ -13,7 +13,7 @@
     <add key="timeoutLogin" value="20" />
     
     <!--<add key="urlGetToken" value="https://identityhubapi.azurewebsites.net/connect/token" />-->
-    <add key="urlGetToken" value="http://10.20.0.161:5001/connect/token" />
+    <add key="urlGetToken" value="http://localhost:5001/connect/token" />
     <!--<add key="urlGetToken" value="https://expoidentityp1.unimednordesters.com.br/connect/token" />-->
     
       <!--<add key="urlGetToken" value="https://expoidentity.unimednordesters.com.br/connect/token" />-->
@@ -41,10 +41,10 @@
     <add key="urlModuloOperacional" value="http://expooperacionalapi.azurewebsites.net/" />-->
 
     <!-- perinatal -->
-    <add key="urlUsuario" value="http://10.20.0.161:5002/" />
-    <add key="urlModuloAdministrativo" value="http://10.20.0.161:5004/" />
-    <add key="urlModuloConfiguracao" value="http://10.20.0.161:5005/" />
-    <add key="urlModuloOperacional" value="http://10.20.0.161:5006/" />
+    <add key="urlUsuario" value="http://localhost:5002/" />
+    <add key="urlModuloAdministrativo" value="http://localhost:5004/" />
+    <add key="urlModuloConfiguracao" value="http://localhost:5005/" />
+    <add key="urlModuloOperacional" value="http://localhost:5006/" />
     
     <!-- unimed homologacao-->
     <!--<add key="urlUsuario" value="https://expousuariop1.unimednordesters.com.br/" />
