--- a/WebMVC/Identityhub.API/appsettings.json
+++ b/WebMVC/Identityhub.API/appsettings.json
@@ -1,8 +1,8 @@
 {
   //"ConnectionString": "Server=DevStationVS;Initial Catalog=ExpoIdentity;User Id=sa;Password=winmaster",
-  "ConnectionString": "Server=10.20.0.78;Initial Catalog=AppGestaoLeitosp1;User Id=admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   //"ConnectionIdString": "Server=DevStationVS;Initial Catalog=ExpoIdentity;User Id=sa;Password=winmaster",
-  "ConnectionIdString": "Server=10.20.0.78;Initial Catalog=AppGestaoLeitosp1;User Id=admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionIdString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   "UseCustomizationData": false,
   "AccessTokenLifetime": "15552000",
   "dame_url": "http://localhost:59820",
