--- a/WebMVC/Usuario.API/appsettings.json
+++ b/WebMVC/Usuario.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   //"ConnectionString": "Server=srvexpodb.database.windows.net;Initial Catalog=UNIMED;User Id=useradmin;Password=Winmaster@@25",
-  "ConnectionString": "Server=10.20.0.78;Initial Catalog=AppGestaoLeitosp1;User Id=admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   "IdentityUrl": "http://localhost:5001",
   "IdentityUrlExternal": "http://localhost:5001",
   "UseCustomizationData": true,
