--- a/WebMVC/Administrativo.API/appsettings.json
+++ b/WebMVC/Administrativo.API/appsettings.json
@@ -2,7 +2,7 @@
   //"ConnectionString": "Server=tcp:10.0.2.4,1433;Initial Catalog=AppGestaoLeitosp1;User Id=sa;Password=winmaster",
   //"ConnectionString": "Server=tcp:10.0.2.4,1433;Initial Catalog=ExpoLeitos;User Id=sa;Password=winmaster",
   //"ConnectionString": "Server=srvexpodb.database.windows.net;Initial Catalog=UNIMED;User Id=useradmin;Password=Winmaster@@25",
-  "ConnectionString": "Server=10.20.0.78;Initial Catalog=AppGestaoLeitosp1;User Id=admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   "IdentityUrl": "http://localhost:5001",
   "IdentityUrlExternal": "http://localhost:5001",
   "UseCustomizationData": false,
