--- a/WebMVC/Configuracao.API/appsettings.json
+++ b/WebMVC/Configuracao.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   //"ConnectionString": "Server=tcp:10.0.2.4,1433;Initial Catalog=AppGestaoLeitosp1;User Id=sa;Password=winmaster",
   //"ConnectionString": "Server=srvexpodb.database.windows.net;Initial Catalog=UNIMED;User Id=useradmin;Password=Winmaster@@25",
-  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionString": "Server=srvexposqlserver.database.windows.net;Initial Catalog=GestaoLeitosDb;User Id=useradmin;Password=expo$!Passw0rd",
+  //"ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   //"ConnectionString": "Server=tcp:10.0.2.4,1433;Initial Catalog=ExpoLeitos;User Id=sa;Password=winmaster",
   "IdentityUrl": "http://localhost:5001",
   "IdentityUrlExternal": "http://localhost:5001",
