--- a/WebMVC/Identityhub.API/appsettings.json
+++ b/WebMVC/Identityhub.API/appsettings.json
@@ -1,8 +1,12 @@
 {
   //"ConnectionString": "Server=DevStationVS;Initial Catalog=ExpoIdentity;User Id=sa;Password=winmaster",
-  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
+  //"ConnectionString": "Server=srvexposqlserver.database.windows.net;Initial Catalog=GestaoLeitosDb;User Id=useradmin;Password=expo$!Passw0rd",
+  //"ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   //"ConnectionIdString": "Server=DevStationVS;Initial Catalog=ExpoIdentity;User Id=sa;Password=winmaster",
-  "ConnectionIdString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
+  //"ConnectionIdString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
+  //"ConnectionIdString": "Server=srvexposqlserver.database.windows.net;Initial Catalog=GestaoLeitosDb;User Id=useradmin;Password=expo$!Passw0rd",
+  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp1;User Id=admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionIdString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp1;User Id=admgestaoleitos;Password=Exporj@2019!",
   "UseCustomizationData": false,
   "AccessTokenLifetime": "15552000",
   "dame_url": "http://localhost:59820",
@@ -20,8 +24,9 @@
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "13920633-1006-4d8c-a771-0a285cfe5b27"
+    "InstrumentationKey": "47140ae3-ed5d-4b17-a837-d614321886d4"
   },
+  //13920633-1006-4d8c-a771-0a285cfe5b27
   "UseVault": false,
   "Vault": {
     "Name": "eshop",
