--- a/WebMVC/Modulo.API/appsettings.json
+++ b/WebMVC/Modulo.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   //"ConnectionString": "Server=srvexpodb.database.windows.net;Initial Catalog=UNIMED;User Id=useradmin;Password=Winmaster@@25",
-  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
+  "ConnectionString": "Server=srvexposqlserver.database.windows.net;Initial Catalog=GestaoLeitosDb;User Id=useradmin;Password=expo$!Passw0rd",
+  //"ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   "IdentityUrl": "http://localhost:5001",
   "IdentityUrlExternal": "http://localhost:5001",
   "UseCustomizationData": false,
