--- a/WebMVC/Operacional.API/appsettings.json
+++ b/WebMVC/Operacional.API/appsettings.json
@@ -2,7 +2,8 @@
   //"ConnectionString": "Server=tcp:10.0.2.4,1433;Initial Catalog=AppGestaoLeitosp1;User Id=sa;Password=winmaster",
   //"ConnectionString": "Server=tcp:10.0.2.4,1433;Initial Catalog=ExpoLeitos;User Id=sa;Password=winmaster",
   //"ConnectionString": "Server=srvexpodb.database.windows.net;Initial Catalog=UNIMED;User Id=useradmin;Password=Winmaster@@25",
-  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp2;User Id=us_admgestaoleitos;Password=Exporj@2019!",
+  //"ConnectionString": "Server=srvexposqlserver.database.windows.net;Initial Catalog=GestaoLeitosDb;User Id=useradmin;Password=expo$!Passw0rd",
+  "ConnectionString": "Server=vm-dev-GLeito01;Initial Catalog=AppGestaoLeitosp1;User Id=us_admgestaoleitos;Password=Exporj@2019!",
   "IdentityUrl": "http://localhost:5001",
   "IdentityUrlExternal": "http://localhost:5001",
   "UseCustomizationData": true,
@@ -36,12 +37,12 @@
   "AzureServiceBusEnabled": false,
   "Endpoint=sb": null,
   "EventBusRetryCount": 5,
-  //"EventBusConnection": "Endpoint=sb://expobus.servicebus.windows.net/;SharedAccessKeyName=Root;SharedAccessKey=qguq2m2UAD2bMwDVdJSGBd+s2SZqDYBjQi2Mi4Bi7Rw=;EntityPath=expo_event_bus",
+  //"EventBusConnection": "Endpoint=sb://demoexpobus.servicebus.windows.net/;SharedAccessKeyName=Root;SharedAccessKey=HmahDE/9vgNEO9sdidC8+wQ2g3r4on2k6DLApa4r+T0=;EntityPath=expo_event_bus",
   "EventBusConnection": "localhost",
   "EventBusUserName": "guest",
   "EventBusPassword": "guest",
   "EventBusVirtualHost": "/",
-  "EventBusPort": "5672",
+  "EventBusPort": "15672",
   "UseVault": false,
   "Vault": {
     "Name": "expo",
